tests/proc-macro-tests/tests/expand/fail/derive.err.txt
error: proc-macro derive panicked
 --> /tests/expand/fail/derive.rs:4:10
  |
4 | #[derive(MyDerivePanics)]
  |          ^^^^^^^^^^^^^^
  |
  = help: message: test
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
